Fix for VE line spacing

--- a/resources/stylesheets/fixes/desktop.less
+++ b/resources/stylesheets/fixes/desktop.less
@@ -16,8 +16,7 @@
 	}
 
 	span.ve-ce-branchNode-slug {
-		height: 1em;
-		display: block;
+		display: inline-block;
 	}
 
 	.oo-ui-processDialog-actions-primary .oo-ui-widget-enabled a {
